Some experiments with docvalues skip index